--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <section class="page-header">
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
-      {% site.contact_url %}
+      {% if site.contact_url %}
         <a href="{{ site.contact_url }}" class="btn">Kontakta mig</a>
       {% endif %}
     </section>
