--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
       <h1 class="project-name">{{ site.title }}</h1>
       <h2 class="project-tagline">{{ site.description }}</h2>
       {% if site.contact_url %}
-        <a href="{{ site.contact_url }}" class="btn">Kontakta mig</a>
+        <a href="{{ site.contact_url }}" target="_blank" class="btn">Kontakta mig</a>
       {% endif %}
     </section>
 
